--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js # Node.js based project
 node_js:
   - 14 # Level of Node.js to use
 cache:
+  yarn: true
   directories:
   - node_modules # Cache the node_modules folder for quicker build times
 script:
