--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "sluzbastronniczy-portfolio",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,13 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "imagemin-mozjpeg": "^10.0.0",
+    "image-trace-loader": "^1.0.2",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^10.0.1",
+    "imagemin-svgo": "9.0.0",
+    "jimp": "^0.16.1",
+    "lqip-loader": "^2.2.1",
     "next": "12.1.6",
+    "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "responsive-loader": "^2.3.0",
+    "svg-sprite-loader": "^6.0.11",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
