--- a/.github/workflows/build-and-deploy-to-pages.yml
+++ b/.github/workflows/build-and-deploy-to-pages.yml
@@ -11,6 +11,19 @@ jobs:
       - name: Checkout 🛎
         uses: actions/checkout@v3
 
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/node_modules
+            ${{ github.workspace }}/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       - name: Install and Build 📦
         run: |
           npm ci
@@ -21,5 +34,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository_name: SluzbaStronniczy/SluzbaStronniczy.github.io
           branch: gh-pages # The branch the action should deploy to.
           folder: out # The folder the action should deploy.
