--- a/.github/workflows/build-and-deploy-to-pages.yml
+++ b/.github/workflows/build-and-deploy-to-pages.yml
@@ -31,6 +31,7 @@ jobs:
           touch out/.nojekyll
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Deploy 🚀
