--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ deploy:
   github_token: $github_token # GitHub access token to use when pushing to the gh-pages branch
   local_dir: out # Directory to push to the gh-pages branch
   on:
-    branch: main
+    branch: master
